# STRIP

./: .gitignore  Dockerfile  README.md  app.py  demo.py  error.txt  inference.py  inference_output.txt  openenv.yaml  pyproject.toml  requirements.txt
agents/: __init__.py  analyst.py  trader.py
data/: scenario_context.json  stock.csv
env/: __init__.py  environment.py  models.py  reward.py
grader/: __init__.py  grader.py
tasks/: bearish.json  bearish_bounce.json  bullish.json  bullish_trap.json  sideways.json  sideways_whipsaw.json  volatile.json  volatile_crash.json
utils/: __init__.py  chart.py
